Se actualiza README, se incluye EndlessScrollListener, cambio en NetworkRequestInterceptor para IOException, implementación inicial de proyecto con listado de usuarios

--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout_root"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.activity.MainActivity">
+    tools:context="mx.gigigo.core.presentation.ui.activity.ListUsersActivity">
 
     <fragment
         android:name="mx.gigigo.core.presentation.ui.fragment.ListUsersFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
