Update Detail User

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -15,8 +15,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:text="Ok"
-        android:id="@+id/button_take"
+        android:text="@string/camera_button"
+        android:id="@+id/button_photo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"/>
