--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,9 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="mx.gigigo.core.presentation.ui.fragment.RegisterFragment">
 <android.support.constraint.ConstraintLayout
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/fab_margin">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/edit1"
@@ -17,10 +17,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         >
         <EditText
-            android:id="@+id/et_name"
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/register_hint_email"/>
+            android:hint="@string/register_hint_email"
+            android:inputType="textEmailAddress"
+            />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -31,13 +33,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
         <EditText
-            android:id="@+id/et_last_name"
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/register_hint_password"/>
+            android:hint="@string/register_hint_password"
+            android:inputType="textPassword"/>
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        android:id="@+id/bt_signup"
         app:layout_constraintTop_toBottomOf="@+id/edit2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
