--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context="mx.gigigo.core.presentation.ui.activity.ListUsersActivity">
 
-    <fragment
-        android:name="mx.gigigo.core.presentation.ui.fragment.ListUsersFragment"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
