--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_root"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="mx.gigigo.core.presentation.ui.activity.RegisterActivity">
-    <FrameLayout
+
+    <fragment
         android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:name="mx.gigigo.core.presentation.ui.fragment.RegisterFragment"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
